vbnc/vbnc/tests/Errors/30581.vb
Class Test
	Shared Function Main As Integer
		Dim o As Object
		o = AddressOf Main
	End Function
End Class
